# INSA_INNOVR_FaceDR

./: .gitignore  700fb.histo  701fa.histo  701fb.histo  CMakeCache.txt  CMakeLists.txt  Doxyfile  FaceFramboise  FaceRecognition.cpp  FacesDatabase.db  Gallery.cpp  Gallery.hpp  Histogram.cpp  Histogram.hpp  Makefile  Person.cpp  Person.hpp  README.md  cmake_install.cmake  detection.cpp  detection.hpp  init.cpp  init.hpp  main.cpp
Doxygen/html/: _build_database_8cpp.html  _build_database_8cpp.js  _build_database_8cpp__incl.dot  _build_database_8cpp__incl.md5  _face_recognition_8cpp.html  _face_recognition_8cpp.js  _face_recognition_8cpp__incl.dot  _face_recognition_8cpp__incl.md5  _gallery_8cpp.html  _gallery_8cpp__incl.dot  _gallery_8cpp__incl.md5  _gallery_8hpp.html  _gallery_8hpp__dep__incl.dot  _gallery_8hpp__dep__incl.md5  _gallery_8hpp__incl.dot  _gallery_8hpp__incl.md5  _gallery_8hpp_source.html  _histogram_8cpp.html  _histogram_8cpp__incl.dot  _histogram_8cpp__incl.md5  _histogram_8hpp.html  _histogram_8hpp__dep__incl.dot  _histogram_8hpp__dep__incl.md5  _histogram_8hpp__incl.dot  _histogram_8hpp__incl.md5  _histogram_8hpp_source.html  _person_8cpp.html  _person_8cpp__incl.dot  _person_8cpp__incl.md5  _person_8hpp.html  _person_8hpp__dep__incl.dot  _person_8hpp__dep__incl.md5  _person_8hpp__incl.dot  _person_8hpp__incl.md5  _person_8hpp_source.html  annotated.html  annotated.js  class_gallery-members.html  class_gallery.html  class_gallery.js  (+59 more)
Doxygen/html/search/: all_61.js  all_62.js  all_63.js  all_64.js  all_66.js  all_67.js  all_6b.js  all_6d.js  all_70.js  all_72.js  defines_6b.js  defines_6e.js  defines_70.js  files_62.js  files_64.js  files_66.js  files_67.js  files_69.js  files_70.js  functions_64.js  functions_67.js  functions_68.js  functions_70.js  functions_74.js  functions_7e.js  pages_69.js  search.css  search.js  variables_70.js  variables_72.js
GNU-Linux (x86-64)/: 700fa.histo  CMakeLists.txt  nedstark.histo
GNU-Linux (x86-64)/Doxygen/html/: _face_recognition_8cpp.html  _face_recognition_8cpp.js  _face_recognition_8cpp__incl.md5  _gallery_8hpp.html  _gallery_8hpp__dep__incl.dot  _gallery_8hpp__dep__incl.md5  _gallery_8hpp__incl.dot  (+36 more)
GNU-Linux (x86-64)/src/: FaceRecognition.cpp  Histogram.cpp  Histogram.hpp  Person.cpp  Person.hpp  detection.cpp  recognition.cpp
src/: BuildDatabase.cpp  CMakeLists.txt  CMakeLists.txt~  FaceRecognition.cpp  Gallery.cpp  Gallery.hpp  Histogram.cpp  Person.hpp~  define.hpp  detection.cpp  detection.cpp~  detection.hpp  init.cpp  init.hpp  main.cpp  recognition.cpp  recognition.hpp
(+23 files in other folders)
